GreatStack  eduford web 課程 => 右側 nav 導覽列, 使用 js 顯示隱藏, 動畫

--- a/GreatStack/eduford/style.css
+++ b/GreatStack/eduford/style.css
@@ -220,6 +220,9 @@ nav {
 
         z-index: 2;
         text-align: left;
+
+
+        transition: 1s; /* 縮放動畫 */
     }
 
     /* 5. 右側導覽列, close icon 樣式 */
