--- a/GreatStack/eduford/style.css
+++ b/GreatStack/eduford/style.css
@@ -323,3 +323,134 @@ nav {
 
 
 
+
+/*
+    六, campus 校園介紹圖塊 
+            1. h2 標頭, p 內容文字 => 須讓 div campus 與 文字置中
+            2. .row 包覆三個 文字說明卡.campus-col
+            3. 文字說明卡.campus-col 包含元素: img , div .layer > h3
+             => 當滑鼠移入 文字說明卡時, layer背景轉紅 , h3標題自下而上呈現
+ */
+.campus{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+
+/* 略 */
+.campus h2 {
+    font-size: 36px;
+    font-weight: 600; /* 字體粗度 */
+}
+
+/* 略 */
+.campus h3 {
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+/* 略 */
+.campus p {   
+    padding: 10px;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px; /* ? 字體行距 */
+}
+
+/* 略 */
+.campus .row {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+/* 
+    3. 文字說明卡.campus-col 包含元素: img , div .layer > h3
+        => 當滑鼠移入 文字說明卡時, layer背景轉紅 , h3標題自下而上呈現
+*/
+
+/* 
+  ?? 保留
+ */
+.campus .campus-col {
+
+    flex-basis: 32%;
+
+    border-radius: 10px;
+    margin-bottom: 30px;
+    position: relative; /* 相對定位 排開 */
+    overflow: hidden;
+}
+
+/* 圖片寬滿版 */
+.campus .campus-col img {
+    width: 100%;
+}
+
+
+/*
+  layer 背景滿版,長寬100%, 
+    1. 使用何種定位? 
+    2. background: transparent; 
+ */
+.layer {
+    height: 100%;
+    width: 100%;
+
+    top: 0;
+    left: 0;
+    position: absolute;
+
+    background: transparent; 
+}
+
+/*
+  滑鼠移入 .layer > hover, 呈現紅色:  rgba(226,0,0,0.7);, + 動畫轉場
+ */
+.layer:hover {
+    background: rgba(226,0,0,0.7);
+    transition: 0.5s;
+}
+
+
+/*  1. layer 內 h3 文字基本設定:
+        width: 100%;
+        font-weight: 500;
+        color: #fff;
+        font-size: 26px;
+    2. 初始定位
+    3. transform: translateX(-50%); => transform: translateX(-50%); 定位, 位移 
+    4. opacity: 0; => 隱藏
+ */
+.layer h3 {
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    
+    transform: translateX(-50%); /* 定位, 位移 */
+    opacity: 0; /* 隱藏 */
+}
+
+/* 
+    layer 當滑鼠移入時, layer 中之 h3 由下往上滑動
+      1. .layer h3 :hover 寫法? 
+      2. opacity: 1; => 顯示
+      3. 轉場動畫秒數
+ */
+.layer:hover h3 {
+    bottom: 49%; /* 底部距離 */
+    opacity: 1;
+    transition: 0.5s;
+}
+
+
+
