--- a/docs/CoffeeWebsite/css/style.css
+++ b/docs/CoffeeWebsite/css/style.css
@@ -47,6 +47,54 @@ section{
     max-width: 1200px;
 }
 
+
+/* 
+    動畫熱氣 => 飄在飲料上方
+ */
+ .vapour {
+    position: relative;
+    top: 4rem;
+    left: 60%;
+    display: flex;
+    z-index: 1;
+    padding: 0 20px;
+}
+
+/* 設定 熱氣 基本白色條 */
+.vapour span {
+    position: relative;
+    bottom: 50px;
+    display: block;
+    margin: 0 2px 50px;
+    min-width: 8px;
+    height: 120px;
+    background: #fff;
+    border-radius: 50%;
+    animation: animate 5s linear infinite;
+
+    opacity: 0;
+    filter: blur(8px);  /* 煙霧 模糊效果 */
+    animation-delay: calc(var(--i) * -0.5s); /* 動畫 */
+}
+
+/* 設定向上飄動畫 */
+@keyframes animate {
+    0% {
+        transform: translateY(0) scaleX(1);
+        opacity: 0;
+    }
+    50% {
+        transform: translateY(-150px) scaleX(5);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-300px) scaleX(10);
+        opacity: 0;
+    }
+}
+
+
+
 .heading{
     text-align: center;
     color:#fff;
