--- a/docs/DentistWebsiteFrontend/css/style.css
+++ b/docs/DentistWebsiteFrontend/css/style.css
@@ -43,6 +43,35 @@ section{
    padding:7rem 2rem;
 }
 
+/* 
+    滑鼠滾動 on scroll 動畫效果 start
+ */
+
+.animate-up-outsite-container  {
+   transform:  translateY(-150px);
+}
+
+.up.animate {
+   transform:  translateY(150px);
+}
+.left.animate {
+   transform:  translateX(-100px);
+}
+.right.animate {
+   transform:  translateX(100px);
+}
+:where(.up, .left, .right).animate > * {
+   opacity: 0;
+   transition: 1s;
+}
+:where(.up, .left, .right).animate.this > * {
+   opacity: 1;
+   transform: translateY(0) translateX(0);
+}
+
+/* 滑鼠滾動 on scroll 動畫效果 end */
+
+
 .heading{
    text-align: center;
    font-size: 4rem;
