--- a/web-layout/scroll-progress-bar/mr-web-designer/style.css
+++ b/web-layout/scroll-progress-bar/mr-web-designer/style.css
@@ -10,6 +10,7 @@
     z-index: 100;
 }
 
+/* 滑鼠滾動 進度條 start  */
 .scroll-progress-bar {
     position: absolute;
     top: 100%;
@@ -19,6 +20,8 @@
     height: .8rem; 
     width: 0;
 }
+/* 滑鼠滾動 進度條 end  */
+
 
 .container {
     width: 100%;
