--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -1,17 +1,22 @@
 
 /* 共用設定 start */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Doppio+One&display=swap'); */
+@import url('./fonts/doppio-one.css');
 @font-face {
     font-family: "DFPZongYiW9-B5"; /* 自訂義 */
     src: url("./fonts/DFPZongYiW9-B5.TTF") format("truetype");
+}
+@font-face {
+    font-family: "jf-openhuninn-2.0"; /* 自訂義 */
+    src: url("./fonts/jf-openhuninn-2.0.ttf") format("truetype");
 }
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Nunito', sans-serif;
+    /* font-family: 'Nunito', sans-serif; */
+    font-family: "DFPZongYiW9-B5";
 }
 
 section {
@@ -26,10 +31,15 @@ section {
 h1 {
     font-size: 128px;
     color: #000000;
+
+    /* Doppio One */
+    font-family: "Doppio One", sans-serif;
     font-weight: 400;
+    font-style: normal;
 }
 h2 {
     font-size: 125px;
+
     font-family: "DFPZongYiW9-B5";
     font-weight: 400;
     -webkit-text-stroke: 1px #000000; /* 邊框 */
@@ -38,11 +48,25 @@ h2 {
 }
 h3 {
     font-size: 64px;
+
     font-family: "DFPZongYiW9-B5";
     font-weight: 400;
     -webkit-text-stroke: 1px #000000; /* 邊框 */
     color: #FFFFFF;
     opacity: 0.5;
+}
+p {
+    /* jf-openhuninn-2.0 */
+    font-family: "jf-openhuninn-2.0", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+label {
+    /* jf-openhuninn-2.0 */
+    font-family: "jf-openhuninn-2.0", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 /* 共用設定 end */
 
@@ -125,19 +149,18 @@ nav .nav-centent .item-list .item img {
 /* 報價流程 start */
 .price-work-flow {
     background: #FFFDFA;
-    position: absolute;
 }
 
 .price-work-flow .left-little-img {
     position: absolute;
-    top: 150px;
+    top: 150vh;
     left: 350px;
     width: 100px;
 }
 
 .price-work-flow .right-img {
     position: absolute;
-    top: 100px;
+    top: 110vh;
     right: 150px;
     width: 500px;
 }
@@ -275,11 +298,7 @@ input[type="radio"]:nth-of-type(4):checked~.controls-visible label:nth-of-type(4
     background-color: #d6a21d;
     width: 20px;
 }
-
-
-
-/*  使用 CSS Selector 選擇器 讓 三張卡片左右位移
-*/
+/*  使用 CSS Selector 選擇器 讓 三張卡片左右位移*/
 input[type="radio"]:nth-of-type(1):checked ~.slide{
     transform: translateX(0%);            
 }
@@ -293,5 +312,64 @@ input[type="radio"]:nth-of-type(4):checked ~.slide{
     transform: translateX(-300%);            
 }
 /* 報價流程-輪播圖 end */
+
+
+/* 服務項目列表 start */
+.service-list {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.service-list .left-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: left;
+}
+
+.service-list .left-block .left-img {
+    position: absolute;
+}
+
+.service-list .left-block .item h4 {
+    color: #000000;
+    opacity: 0.6;
+    font-size: 40px;
+    font-weight: 400;
+}
+
+.service-list .left-block .item p {
+    color: #000000;
+    opacity: 0.2;
+    font-size: 20px;
+    font-weight: 100;
+    line-height: 30px;
+    padding: 20px 0;
+}
+
+.service-list .right-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    text-align: left;
+    height: 60%;
+}
+
+.service-list .right-block {
+    width: 20%;
+}
+
+.service-list .right-block h3 {
+    margin-bottom: 150px;
+}
+
+.service-list .right-block img {
+    width: 200px;
+}
+/* 服務項目列表 end */
+
 
 
