--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -1,5 +1,5 @@
 
-/* 共用設定 start */
+/* =========================== 共用設定 start =========================== */
 
 /* @import url('https://fonts.googleapis.com/css2?family=Doppio+One&display=swap'); */
 @import url('./fonts/doppio-one.css');
@@ -18,7 +18,9 @@
     font-family: 'Nunito', sans-serif;
     text-decoration: none;
     text-transform: capitalize;
-    outline: none; border:none;
+    outline: none; 
+    border:none;
+    
 }
 
 :root {
@@ -39,8 +41,8 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    text-align: center;
+    align-items: center; 
+    /* text-align: center; */
 }
 h1 {
     font-size: 128px;
@@ -86,7 +88,30 @@ a {
     font-weight: 400;
     font-style: normal;
 }
-/* 共用設定 end */
+
+/* 文字水平變色 start */
+.text-color-transition-container {
+}
+.text-color-transition {
+    position: relative;
+}
+.text-color-transition::before {
+    content: attr(data-text);
+    position: absolute;
+    opacity: 1;
+    width: 0%;
+    height: 100%;
+    overflow: hidden;
+    color: var(--primary-blue);
+    -webkit-text-stroke: 1px var(--primary-blue); 
+    opacity: 1;
+    transition: 2s;
+}
+.text-color-transition:hover::before {
+    width: 100%;
+}
+/* 文字水平變色 end */
+/* =========================== 共用設定 end =========================== */
 
 
 /* 上方導覽列 start */
