fix 上一 commit 誤差

--- a/web-layout/background-color-transition/CluelessExpert/style.css
+++ b/web-layout/background-color-transition/CluelessExpert/style.css
@@ -16,6 +16,9 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    text-align: center;
+    align-items: center;
 }
 
 
