--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -95,21 +95,75 @@ a {
 .text-color-transition {
     position: relative;
 }
+
+.text-color-transition h3 {
+    opacity: 0.5;
+}
 .text-color-transition::before {
     content: attr(data-text);
     position: absolute;
-    width: 0%;
+    width: 0;
     height: 100%;
     overflow: hidden;
     color: var(--primary-blue);
-    -webkit-text-stroke: 1px var(--primary-blue); 
+    -webkit-text-stroke: 1px var(--primary-blue);     
+    transition: 1s;
+    z-index: 2;
     opacity: 1;
-    transition: 2s;
 }
 .text-color-transition:hover::before {
     width: 100%;
 }
 /* 文字水平變色 end */
+
+
+/* 文字彈性底線動畫 start */
+.text-bounce-button-blue-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+}
+.text-bounce-button-blue {}
+.text-bounce-button-blue:hover:after {
+    content: "";
+    width: 80%;
+    height: 5px;
+    border-radius: 2.5px;
+    background: var(--primary-blue);
+    display: inline-block;
+    position: absolute;
+    top: 100%;
+    animation: text-bounce-butto-animation 1s linear;
+}
+@keyframes text-bounce-butto-animation {
+    20% {
+        width: 30%;
+    }
+    40% {
+        width: 90%
+    }
+    50% {
+        width: 40%
+    }
+    60% {
+        width: 95%
+    }
+    70% {
+        width: 60%
+    }
+    80% {
+        width: 100%
+    }
+    90% {
+        width: 70%;
+    }
+    100% {
+        width: 100%;
+    }
+}
+/* 文字彈性底線動畫 end */
 /* =========================== 共用設定 end =========================== */
 
 
