--- a/web-layout/background-color-transition/第三方/style.css
+++ b/web-layout/background-color-transition/第三方/style.css
@@ -10,20 +10,22 @@ section {
     display: grid;
     place-content: center;
 
-    p {
-        font-size: clamp(2rem, 5vw, 8rem);
-    }
 
-    &:nth-of-type(1) {
-        border-bottom: 1px solid black;
-    }
+}    
 
-    &:nth-of-type(3) {
-        background: #ffff00;
-    }
+section p {
+    font-size: clamp(2rem, 5vw, 8rem);
+}
 
-    &:nth-of-type(4) {
-        background: rgb(29, 29, 29);
-        color: white;
-    }
+section &:nth-of-type(1) {
+    border-bottom: 1px solid black;
+}
+
+section &:nth-of-type(3) {
+    background: #ffff00;
+}
+
+section &:nth-of-type(4) {
+    background: rgb(29, 29, 29);
+    color: white;
 }
